added the get checks handlers
