# src/api/middlewares/requireAuthUser.middleware.ts
@@ -2,21 +2,16 @@ import { IRequest } from "../../types/index";
 import { NextFunction, Response } from "express";
 import {
   authenticationRequiredResponse,
-  invalidAuthenticationTokenResponse,
   serverErrorResponse,
 } from "../helpers/errors";
-import { usersRepository } from "src/db";
+import { usersRepository } from "../../db";
 
 export const requiredAuthentication = async (
   req: IRequest,
   res: Response,
   next: NextFunction
 ) => {
-  if (!req.auth?.id) {
-    return next(authenticationRequiredResponse());
-  }
-
-  const id = req.auth.id;
+  const id = req.id;
 
   try {
     const user = await usersRepository.findOne({
@@ -27,6 +22,7 @@ export const requiredAuthentication = async (
     if (!user) {
       return next(authenticationRequiredResponse());
     }
+    req.user = user;
     return next();
   } catch (err: any) {
     return next(serverErrorResponse(err));
