# src/docs/swagger.json
@@ -194,16 +194,16 @@
         }
       }
     },
-    "/biker/login": {
+    "/v1/checks/": {
       "post": {
-        "tags": ["bikers"],
-        "description": "Biker login",
-        "operationId": "signinBiker",
+        "tags": ["checks"],
+        "description": "create check",
+        "operationId": "createCheck",
         "requestBody": {
           "content": {
             "application/json": {
               "schema": {
-                "$ref": "#/components/schemas/AuthenticateUser"
+                "$ref": "#/components/schemas/Check"
               }
             }
           }
@@ -214,7 +214,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/AuthenticateUserResponse"
+                  "$ref": "#/components/schemas/Check"
                 }
               }
             }
@@ -232,21 +232,42 @@
             "$ref": "#/components/responses/ServerError"
           }
         }
-      }
-    },
-    "/orders/sender": {
+      },
       "get": {
-        "tags": ["orders"],
-        "description": "obtain orders for a specific sender",
-        "operationId": "getOrdersForSender",
+        "tags": ["reports"],
+        "description": "obtain Report",
+        "operationId": "getReports",
+        "parameters": [
+          {
+            "name": "name",
+            "in": "query",
+            "description": "the name of the check",
+            "schema": {
+              "type": "string",
+              "default": ""
+            }
+          },
+          {
+            "name": "tag",
+            "in": "query",
+            "description": "tag inclueded",
 
+            "schema": {
+              "type": "string",
+              "default": ""
+            }
+          }
+        ],
         "responses": {
           "200": {
             "description": "success request",
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/OrdersResponse"
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/CheckWithOrder"
+                  }
                 }
               }
             }
@@ -263,26 +284,64 @@
         }
       }
     },
-    "/orders": {
-      "post": {
-        "tags": ["orders"],
-        "description": "Create New Order",
-        "operationId": "createOrder",
-        "requestBody": {
-          "$ref": "#/components/requestBodies/AddOrder"
-        },
+    "/v1/checks/{id}": {
+      "get": {
+        "tags": ["checks"],
+        "description": "obtain check",
+        "operationId": "getCheck",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "the id of the user",
+            "required": true,
+            "schema": {
+              "type": "integer"
+            }
+          }
+        ],
         "responses": {
-          "201": {
+          "200": {
             "description": "success request",
-            "headers": {
-              "Location": {
-                "description": "the location of the movie",
+            "content": {
+              "application/json": {
                 "schema": {
-                  "type": "string",
-                  "example": "/v1/movie/4"
+                  "$ref": "#/components/schemas/CheckWithOrder"
                 }
               }
-            },
+            }
+          },
+          "401": {
+            "$ref": "#/components/responses/AuthenticationRequiredResponse"
+          },
+          "404": {
+            "$ref": "#/components/responses/NotFoundResponse"
+          },
+          "500": {
+            "$ref": "#/components/responses/ServerError"
+          }
+        }
+      }
+    },
+    "/v1/report/{id}": {
+      "get": {
+        "tags": ["reports"],
+        "description": "obtain Report",
+        "operationId": "getReport",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "the id of the user",
+            "required": true,
+            "schema": {
+              "type": "integer"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "success request",
             "content": {
               "application/json": {
                 "schema": {
@@ -291,196 +350,11 @@
               }
             }
           },
-          "400": {
-            "$ref": "#/components/responses/BadRequestResponse"
-          },
-          "401": {
-            "$ref": "#/components/responses/AuthenticationRequiredResponse"
-          },
-          "422": {
-            "$ref": "#/components/responses/FailedValidationResponse"
-          },
-          "500": {
-            "$ref": "#/components/responses/ServerError"
-          }
-        }
-      }
-    },
-    "/orders/biker/in-process": {
-      "get": {
-        "tags": ["orders"],
-        "description": "obtain orders for biker to do",
-        "operationId": "getToDoOrdersForBiker",
-
-        "responses": {
-          "200": {
-            "description": "success request",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/OrdersResponse"
-                }
-              }
-            }
-          },
           "401": {
             "$ref": "#/components/responses/AuthenticationRequiredResponse"
           },
           "404": {
             "$ref": "#/components/responses/NotFoundResponse"
-          },
-          "500": {
-            "$ref": "#/components/responses/ServerError"
-          }
-        }
-      }
-    },
-    "/orders/biker/idle": {
-      "get": {
-        "tags": ["orders"],
-        "description": "obtain orders for biker that is idle",
-        "operationId": "getIdleOrders",
-
-        "responses": {
-          "200": {
-            "description": "success request",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/OrdersResponse"
-                }
-              }
-            }
-          },
-          "401": {
-            "$ref": "#/components/responses/AuthenticationRequiredResponse"
-          },
-          "404": {
-            "$ref": "#/components/responses/NotFoundResponse"
-          },
-          "500": {
-            "$ref": "#/components/responses/ServerError"
-          }
-        }
-      }
-    },
-    "/orders/{id}/claim": {
-      "patch": {
-        "tags": ["orders"],
-        "description": "update Movie",
-        "operationId": "claimOrder",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "description": "the id of the order",
-            "required": true,
-            "schema": {
-              "type": "integer",
-              "format": "int64"
-            }
-          }
-        ],
-        "requestBody": {
-          "content": {
-            "application/json": {
-              "schema": {
-                "properties": {
-                  "picked_up_at": {
-                    "type": "string",
-                    "format": "date",
-                    "example": "2014-06-26T04:07:31.000Z",
-                    "nullable": false
-                  }
-                }
-              }
-            }
-          }
-        },
-        "responses": {
-          "200": {
-            "description": "successful operation",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/SuccessResponse"
-                }
-              }
-            }
-          },
-          "400": {
-            "$ref": "#/components/responses/BadRequestResponse"
-          },
-          "401": {
-            "$ref": "#/components/responses/AuthenticationRequiredResponse"
-          },
-          "404": {
-            "$ref": "#/components/responses/NotFoundResponse"
-          },
-          "409": {
-            "$ref": "#/components/responses/EditConflictResponse"
-          },
-          "500": {
-            "$ref": "#/components/responses/ServerError"
-          }
-        }
-      }
-    },
-    "/orders/{id}/deliver": {
-      "patch": {
-        "tags": ["orders"],
-        "description": "update Movie",
-        "operationId": "deliverOrder",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "description": "the id of the order",
-            "required": true,
-            "schema": {
-              "type": "integer",
-              "format": "int64"
-            }
-          }
-        ],
-        "requestBody": {
-          "content": {
-            "application/json": {
-              "schema": {
-                "properties": {
-                  "delivered_at": {
-                    "type": "string",
-                    "format": "date",
-                    "example": "2014-06-26T04:07:31.000Z",
-                    "nullable": false
-                  }
-                }
-              }
-            }
-          }
-        },
-        "responses": {
-          "200": {
-            "description": "successful operation",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/SuccessResponse"
-                }
-              }
-            }
-          },
-          "400": {
-            "$ref": "#/components/responses/BadRequestResponse"
-          },
-          "401": {
-            "$ref": "#/components/responses/AuthenticationRequiredResponse"
-          },
-          "404": {
-            "$ref": "#/components/responses/NotFoundResponse"
-          },
-          "409": {
-            "$ref": "#/components/responses/EditConflictResponse"
           },
           "500": {
             "$ref": "#/components/responses/ServerError"
@@ -489,6 +363,7 @@
       }
     }
   },
+
   "components": {
     "schemas": {
       "OrdersResponse": {
@@ -652,6 +527,154 @@
             "format": "date"
           }
         }
+      },
+      "Report": {
+        "type": "object",
+        "required": ["id", "name", "email", "password"],
+        "nullable": false,
+        "properties": {
+          "id": {
+            "type": "integer",
+            "format": "int64"
+          },
+          "status": {
+            "type": "string",
+            "enum": ["up", "down"]
+          },
+          "availability": {
+            "type": "number"
+          },
+          "outages": {
+            "type": "number"
+          },
+          "alertTimes": {
+            "type": "number"
+          },
+          "downtime": {
+            "type": "number"
+          },
+          "uptime": {
+            "type": "number"
+          },
+          "responseTimes": {
+            "type": "array",
+            "items": {
+              "type": "number"
+            }
+          },
+          "history": {
+            "type": "array",
+            "items": {
+              "type": "number"
+            }
+          },
+
+          "created_at": {
+            "type": "string",
+            "format": "date"
+          },
+          "updated_at": {
+            "type": "string",
+            "format": "date"
+          }
+        }
+      },
+      "Check": {
+        "type": "object",
+        "nullable": false,
+        "required": ["name", "url", "protocol"],
+        "properties": {
+          "id": {
+            "type": "integer",
+            "format": "int64"
+          },
+          "name": {
+            "type": "string"
+          },
+
+          "url": {
+            "type": "string"
+          },
+          "protocol": {
+            "type": "string",
+            "enum": ["HTTP", "HTTPS", "TCP"]
+          },
+          "path": {
+            "type": "string"
+          },
+          "port": {
+            "type": "integer",
+            "format": "int8"
+          },
+          "webhook": {
+            "type": "string"
+          },
+          "timeout": {
+            "type": "number"
+          },
+          "threshold": {
+            "type": "number"
+          },
+          "interval": {
+            "type": "number"
+          },
+
+          "authentication": {
+            "type": "object",
+            "properties": {
+              "username": { "type": "string" },
+              "password": { "type": "string" }
+            }
+          },
+          "asserts": {
+            "type": "object",
+            "properties": {
+              "code": { "type": "number" }
+            }
+          },
+          "httpHeaders": {
+            "type": "array",
+            "items": {
+              "type": "object",
+              "properties": {
+                "key": { "type": "string" },
+                "value": { "type": "string" }
+              }
+            }
+          },
+          "tags": {
+            "type": "array",
+            "items": {
+              "type": "string"
+            }
+          },
+          "ignoreSSL": {
+            "type": "boolean"
+          },
+          "created_at": {
+            "type": "string",
+            "format": "date"
+          },
+          "updated_at": {
+            "type": "string",
+            "format": "date"
+          }
+        }
+      },
+      "CheckWithOrder": {
+        "allOf": [
+          {
+            "$ref": "#/components/schemas/Check"
+          },
+          {
+            "type": "object",
+            "properties": {
+              "report": {
+                "$ref": "#/components/schemas/Report"
+              }
+            }
+          }
+        ]
       },
       "CreateUser": {
         "type": "object",
